card와 item으로 분리

--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,32 +1,1 @@
-.item-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 10rem; /* 고정 너비, 필요에 따라 조정 가능 */
-    background-color: #cf8080aa;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 5px;
-    margin: 0.4rem; /* 외부 간격 */
-    transition: transform 0.2s ease; /* 호버 애니메이션 */
-  }
-  
-  .item-container:hover {
-    transform: translateY(-5px); /* 호버 시 살짝 올라감 */
-  }
-  
-  .item-image {
-    width: 100%; /* 컨테이너에 맞춤 */
-    height: 100%; /* 고정 높이, 필요에 따라 조정 */
-    object-fit: cover; /* 이미지가 잘리지 않게 비율 유지 */
-    border-radius: 8px;
-    margin-bottom: 15px; /* 이미지와 설명 간 간격 */
-  }
-  
-  .item-description {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    color: #333;
-    text-align: center;
-    margin: 0; /* 기본 마진 제거 */
-  }
+/*Item.css*/
