모달 창 생성

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ input {
 
 button {
   padding: 5px 10px;
-  background-color: #61dafb;
+  background-color: #fb8261;
   border: none;
   cursor: pointer;
 }
