로그인 버튼 추가

--- a/src/layout/Navbar.css
+++ b/src/layout/Navbar.css
@@ -4,16 +4,17 @@ nav {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 부드러운 그림자 */
     padding: 1rem 4rem; /* 상하 패딩 */
     position: sticky; /* 상단 고정 (선택사항) */
-    top: 0;
+    /*top: 0;*/
     z-index: 999;
     display: flex; /* 가로 배치 */
-    justify-content: center; /* 중앙 정렬 */
+    justify-content: space-between; /* 중앙 정렬 */
+    position: relative;
 }
 
 #logo {
     font-family: 'Brush Script MT', sans-serif;
     font-size: 3.5rem;
-    margin: 0 6rem 0 0;
+    margin: 0 0;
 }
 
 #logo:hover{
@@ -64,3 +65,31 @@ li a.active {
     color: #f07b00;
     border-bottom: 2px solid #f07b00;
 }
+
+/* 로그인 버튼 컨테이너 스타일 */
+.login-container {
+    margin: 1.5rem 7rem;
+    display: flex;
+    justify-content: flex-end;
+}
+  
+  /* 로그인 버튼 스타일 */
+  .login-btn {
+    display: inline-block;
+    padding: 8px 20px;
+    background-color: #ff7b00; /* 부드러운 블루 톤 */
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 25px; /* 둥근 버튼 */
+    transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 살짝 입체감 */
+  }
+  
+  /* 호버 효과 */
+  .login-btn:hover {
+    background-color: #b35600; /* 호버 시 조금 더 진한 블루 */
+    transform: translateY(-2px); /* 살짝 떠오르는 효과 */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
