--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   /*margin-top: 50px;*/
 }
 
+.page-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 html{
   background-color: #801840;
 }
