--- a/src/components/RecipeContainer.css
+++ b/src/components/RecipeContainer.css
@@ -7,16 +7,22 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
-    align-items: end;
+    flex-direction: column;
+    align-items: start;
 }
 
-.recipe-container h1{
+.recipe-content h1{
     margin: 0;
     text-align: left;
     flex-shrink: 0;
 }
 
-.recipe-container p{
+.recipe-content p{
     margin: 0.2rem 0.5rem;
     text-align: left;
+}
+
+.recipe-content {
+    display: flex;
+    flex-direction: row;
 }
