--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,27 @@ button {
 .enter-button:active {
   transform: translateY(10px);
 }
+
+.round-box {
+  padding: 2% 5%;
+  margin: 2% 5%;
+  background-color: #ae5135bf;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.clickable{
+  transition: transform 0.2s ease;
+}
+
+.clickable:hover{
+  transform: translateY(-5px);
+  color: aqua;
+}
+
+.clickable:active{
+  transform: translateY(10px);
+}
